--- a/elasticsearch/Cargo.toml
+++ b/elasticsearch/Cargo.toml
@@ -15,15 +15,15 @@ readme = "../README.md"
 all-features = true
 
 [features]
-default = ["native-tls"]
+default = []
 
 # beta and experimental APIs
 beta-apis = []
 experimental-apis = ["beta-apis"]
 
 # optional TLS
-native-tls = ["reqwest/native-tls"]
-rustls-tls = ["reqwest/rustls-tls"]
+native-tls = ["reqwest_wasi/native-tls"]
+rustls-tls = ["reqwest_wasi/rustls-tls"]
 
 [dependencies]
 base64 = "^0.11"
@@ -31,7 +31,7 @@ bytes = "^1.0"
 dyn-clone = "~1"
 lazy_static = "1.4"
 percent-encoding = "2.1.0"
-reqwest = { version = "~0.11", default-features = false, features = ["gzip", "json"] }
+reqwest_wasi = { version = "0.11", features = ["json"] }
 url = "^2.1"
 serde = { version = "~1", features = ["derive"] }
 serde_json = "~1"
@@ -44,12 +44,22 @@ clap = "~2"
 failure = "0.1.5"
 futures = "0.3.1"
 http = "0.2"
-hyper = { version = "0.14", default-features = false, features = ["tcp", "stream", "server"] }
+hyper_wasi = { version = "0.15.2", default-features = false, features = [
+  "tcp",
+  "stream",
+  "server",
+] }
 os_type = "2.2"
-regex="1.4"
+regex = "1.4"
 sysinfo = "0.12.0"
 textwrap = "^0.11"
-tokio = { version = "1.0", default-features = false, features = ["macros", "net", "time", "rt-multi-thread"] }
+tokio_wasi = { version = "1.0", default-features = false, features = [
+  "macros",
+  "net",
+  "io-util",
+  "rt",
+  "time",
+] }
 xml-rs = "^0.8"
 
 [build-dependencies]
